--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 body{
+    background: #555;
     margin: 0;
     padding: 0;
 }
@@ -15,6 +16,15 @@ body{
     font-size: 50px;
     text-align: center;
 }
+ .header-content h1{
+     text-shadow: 5px 5px 3px black;
+ }
+
+ .header-content p{
+     background-color: rgba(0, 0 , 0, .5);
+     display: inline-block;
+     border-bottom: 2px solid;
+ }
 
 .hero nav ul{
     text-align: right;
@@ -38,3 +48,36 @@ body{
     padding: 10px;
     display: block;
 }
+
+.hero nav a:hover{
+    background-color: rgba(0, 0, 0, .5);
+
+}
+
+main{
+
+    width: 80%;
+    margin: auto;
+    
+}
+
+.content-section{
+    background-color: white;
+    padding: 10px;
+    margin-top: 10px;
+    overflow: auto;
+}
+.card img{
+    width: 100%;
+}
+
+.card{
+    width: 32%;
+    float: left;
+    box-sizing: border-box;
+    
+}
+.card1, .card2{
+    margin-right: 2%;
+}
+
